[package]
name = "regione_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rust-lapper = { version = "*", features = ["with_serde"] }
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = { version = "0.4.0" }
rand = { version = "0.8.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.96" }
