[package]
name = "regione_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rust-lapper = { version = "*", features = ["with_serde"] }
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = { version = "0.4.0" }
fastrand = { version = "1.9.0" }
tinyrand = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.96" }
tinyrand-std = { version = "0.5.0" }
# pprof = { version = "0.11" }
